Grammar.txt
Program     -> "Programa" "{" Principal "}"
Principal   -> "principal" "{" Block "}"
Block       -> { Statement }
Statement   -> VarDecl | Expr ";"
VarDecl     -> ("Entero" | "Real") Variable "=" Expr ";"
Expr        -> Term { ("+" | "-") Term }
Term        -> Factor { ("*" | "/") Factor }
Factor      -> Variable | Integer | Real | "(" Expr ")"
Variable    -> [a-zA-Z_][a-zA-Z0-9_]*
Integer     -> [0-9]+
Real        -> [0-9]+("." [0-9]*)?("E" ("+" | "-")? [0-9]+)?
